<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:keepScreenOn="true"
        tools:context=".MainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_size"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorHintsBackground">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/narrow_margin"
                android:src="@drawable/ic_back"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/label_navigate_home" />

            <TextView
                android:id="@+id/headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/header_text_size"
                app:layout_constraintStart_toEndOf="@id/button_back"
                app:layout_constraintTop_toTopOf="@id/button_back"
                app:layout_constraintBottom_toBottomOf="@id/button_back"
                android:background="@android:color/transparent"
                android:textSize="@dimen/header_text_size"
                android:text="@string/app_name" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/header_text_size"
                app:layout_constraintStart_toEndOf="@id/button_back"
                app:layout_constraintTop_toBottomOf="@id/headline"
                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/tiny_text_size"
                android:text="@string/default_version" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/show_magnetometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline1"
            android:layout_margin="@dimen/narrow_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/label_show_magnetometer" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_show_magnetometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toTopOf="@id/show_magnetometer"
            app:layout_constraintBottom_toBottomOf="@id/show_magnetometer"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/show_accelerometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/show_magnetometer"
            android:layout_margin="@dimen/narrow_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/label_show_accelerometer" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_show_accelerometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toTopOf="@id/show_accelerometer"
            app:layout_constraintBottom_toBottomOf="@id/show_accelerometer"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/apply_low_pass_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/show_accelerometer"
            android:layout_margin="@dimen/narrow_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/label_apply_low_pass_filter" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_apply_low_pass_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toTopOf="@id/apply_low_pass_filter"
            app:layout_constraintBottom_toBottomOf="@id/apply_low_pass_filter"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/lambda1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toBottomOf="@id/apply_low_pass_filter"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/label_lambda1" />

        <TextView
            android:id="@+id/value_lambda1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fat_margin"
            app:layout_constraintTop_toTopOf="@id/lambda1"
            app:layout_constraintBottom_toBottomOf="@id/lambda1"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/default_lambda" />

        <TextView
            android:id="@+id/lambda2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lambda1"
            android:layout_margin="@dimen/narrow_margin"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/label_lambda2" />

        <TextView
            android:id="@+id/value_lambda2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/fat_margin"
            app:layout_constraintTop_toTopOf="@id/lambda2"
            app:layout_constraintBottom_toBottomOf="@id/lambda2"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/normal_text_size"
            android:text="@string/default_lambda" />

        <androidx.legacy.widget.Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/normal_text_size"
            app:layout_constraintTop_toBottomOf="@id/lambda2" />

        <TextView
            android:id="@+id/label_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toBottomOf="@id/space"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/tiny_text_size"
            android:text="@string/text_settings_details" />

        <ImageView
            android:id="@+id/button_pdf"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/pdf"
            android:contentDescription="@string/label_show_pdf" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

