<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:keepScreenOn="true"
        tools:context=".MainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80" />

       <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/narrow_margin">

            <com.stho.mobicompass.CompassView
                android:id="@+id/compass"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <ImageView
            android:layout_width="@dimen/target_size"
            android:layout_height="@dimen/target_size"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/target"
            android:contentDescription="@string/label_target" />

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline1"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/header_size"
            android:text="@string/label_default_headline" />

        <ImageView
            android:id="@+id/button_automatic_mode"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/auto"
            android:contentDescription="@string/label_toggle_manual_mode" />

        <TextView
            android:id="@+id/button_show_hints"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/narrow_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline1"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:textAlignment="center"
            android:textColor="@color/colorQuestion"
            android:textSize="@dimen/header_size"
            android:text="@string/label_question" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hints_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:alpha="0.3"
            android:background="@color/colorHintsBackground">

            <TextView
                android:id="@+id/hints_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/narrow_margin"
                android:textAlignment="center"
                android:textColor="@color/colorHintsText"
                android:textSize="@dimen/header_size"
                android:text="@string/label_automatic_mode" />

            <TextView
                android:id="@+id/hints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/hints_margin"
                android:textAlignment="textStart"
                android:textColor="@color/colorHintsText"
                android:text="@string/label_hints_automatic_mode" />

            <ImageView
                android:id="@+id/button_dismiss_hints"
                android:layout_width="@dimen/button_size"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/hints_header"
                app:layout_constraintBottom_toBottomOf="@id/hints_header"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/label_dismiss" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
